fix(style): Fixed an issue where checkboxes in the playground would turn white when in dark mode.

--- a/src/styles/_global.css
+++ b/src/styles/_global.css
@@ -126,12 +126,14 @@ h5 {
 
 :root {
 	scroll-padding-top: 80px;
-	color-scheme: light only;
 
 	@mixin mobile-only {
 		scroll-padding-top: 64px;
 	}
 	@mixin dark-mode {
 		color-scheme: dark only;
+	}
+	@mixin dark-mode {
+		color-scheme: light only;
 	}
 }
