--- a/src/styles/_mixins.css
+++ b/src/styles/_mixins.css
@@ -58,6 +58,18 @@
 	transition-timing-function: cubic-bezier(0.57, 0.33, 0.19, 0.97);
 }
 
+@define-mixin light-mode {
+	:root[data-theme="light"] & {
+		@mixin-content;
+	}
+
+	@media (prefers-color-scheme: light) {
+		:root[data-theme="auto"] & {
+			@mixin-content;
+		}
+	}
+}
+
 @define-mixin dark-mode {
 	:root[data-theme="dark"] & {
 		@mixin-content;
